tests/fixtures/errors/string_append_while_view.z
# E0200: a stringview borrows its source string -- a writer (append may
# reallocate) cannot run while the view lives.
main: function is {
    s: "hello".string
    sv: s.stringview
    s.append "!"
    print sv
}
